<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_email">Email:</string>
    <string name="txt_password">Password:</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_welcome">Welcome</string>
    <string name="txt_welcome_to_the_store">Welcome to the Shoe Store!</string>
    <string name="txt_short_description">This is awesome, look at many types of shoes.</string>
    <string name="txt_go_to_instructions">Go to Instructions</string>
    <string name="txt_instructions">Instructions</string>
    <string name="txt_instructions_text">Go to the list of shoes, then tap on add button to add  new shoes.</string>
    <string name="txt_shoes_name">Shoes Name:</string>
    <string name="txt_shoes_description">Description:</string>
    <string name="txt_company">Company:</string>
    <string name="txt_size">Size:</string>
    <string name="txt_name">Shoes Name</string>
    <string name="txt_detail">Shoes Detail</string>
    <string name="txt_save">Save</string>
    <string name="txt_enter_a_name">You must enter a name!</string>
    <string name="txt_enter_a_company">You must enter a company!</string>
    <string name="txt_enter_a_detail">You must enter a detail!</string>
    <string name="txt_enter_a_size">You must enter a size!</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_go_home">Go to home</string>
</resources>
