<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.welcome.onboarding.OnBoardingFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center">

        <TextView
            android:id="@+id/onBoardingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_welcome_to_the_store"/>

        <TextView
            android:id="@+id/onBoardingSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_short_description"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/onBoardingInstructionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_go_to_instructions"
            android:layout_marginTop="20dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>