<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.welcome.onboardingdetail.OnBoardingInstructionsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_instructions"
            style="@style/HeaderStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_instructions_text"
            style="@style/ContentStyle"
            android:layout_marginStart="@dimen/midViewMargin"
            android:layout_marginEnd="@dimen/midViewMargin"
            android:layout_marginTop="@dimen/midViewMargin" />

        <Button
            android:id="@+id/onBoardingInstructionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_go_home"
            android:layout_marginTop="@dimen/midViewMargin" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>