<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.welcome.login.LoginFragment">

        <!-- Uses a linear layout because this screen shows a simple design,
        the views are one next to another and the constraint are not necessary. -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/midViewMargin"
            android:layout_marginEnd="@dimen/midViewMargin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txt_email"
                style="@style/LabelStyle"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:minHeight="@dimen/minHeight"
                tools:ignore="SpeakableTextPresentCheck"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txt_password"
                style="@style/LabelStyle"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:minHeight="@dimen/minHeight"
                tools:ignore="SpeakableTextPresentCheck"
                android:importantForAutofill="no" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sig_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_sign_in"
                android:textSize="@dimen/normalTextSize"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_sign_up"
                android:textSize="@dimen/normalTextSize"
                android:textStyle="bold"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>